casio_ur_2.sdk/.metadata/.plugins/org.eclipse.cdt.ui/ur_2.build.log
16:13:50 **** Auto Build of configuration Debug for project ur_2 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/interrupt_counter_tut_2D.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/interrupt_counter_tut_2D.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ur_2_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/interrupt_counter_tut_2D.d" -MT"src/interrupt_counter_tut_2D.o" -o "src/interrupt_counter_tut_2D.o" "../src/interrupt_counter_tut_2D.c"
In file included from ../src/interrupt_counter_tut_2D.c:33:0:
../../ur_2_bsp/ps7_cortexa9_0/include/xtime_l.h:89:9: note: #pragma message: For the sleep routines, Global timer is being used
 #pragma message ("For the sleep routines, Global timer is being used")
         ^~~~~~~
../src/interrupt_counter_tut_2D.c: In function 'BTN_Intr_Handler':
../src/interrupt_counter_tut_2D.c:435:72: error: 'INTC__INTERRUPT_ID' undeclared (first use in this function); did you mean 'INTC_TMR_INTERRUPT_ID'?
     XScuGic_GetPriTrigTypeByDistAddr(INTCInst.Config->DistBaseAddress, INTC__INTERRUPT_ID, &pri, &trig);
                                                                        ^~~~~~~~~~~~~~~~~~
                                                                        INTC_TMR_INTERRUPT_ID
../src/interrupt_counter_tut_2D.c:435:72: note: each undeclared identifier is reported only once for each function it appears in
../src/interrupt_counter_tut_2D.c:435:93: error: 'pri' undeclared (first use in this function); did you mean 'print'?
     XScuGic_GetPriTrigTypeByDistAddr(INTCInst.Config->DistBaseAddress, INTC__INTERRUPT_ID, &pri, &trig);
                                                                                             ^~~
                                                                                             print
../src/interrupt_counter_tut_2D.c:435:99: error: 'trig' undeclared (first use in this function); did you mean 'pri'?
     XScuGic_GetPriTrigTypeByDistAddr(INTCInst.Config->DistBaseAddress, INTC__INTERRUPT_ID, &pri, &trig);
                                                                                                   ^~~~
                                                                                                   pri
../src/interrupt_counter_tut_2D.c:443:1: error: 'y' undeclared (first use in this function)
 y
 ^
../src/interrupt_counter_tut_2D.c:444:4: error: expected ';' before 'if'
    if(btn_value == C)
    ^~
In file included from ../../ur_2_bsp/ps7_cortexa9_0/include/xgpio.h:135:0,
                 from ../src/interrupt_counter_tut_2D.c:28:
../src/interrupt_counter_tut_2D.c: In function 'reInitTimer':
../../ur_2_bsp/ps7_cortexa9_0/include/xstatus.h:65:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/interrupt_counter_tut_2D.c:782:37: note: in expansion of macro 'XST_FAILURE'
    if(status != XST_SUCCESS) return XST_FAILURE;
                                     ^~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:779:6: note: declared here
 void reInitTimer(){
      ^~~~~~~~~~~
In file included from ../../ur_2_bsp/ps7_cortexa9_0/include/xgpio.h:135:0,
                 from ../src/interrupt_counter_tut_2D.c:28:
../../ur_2_bsp/ps7_cortexa9_0/include/xstatus.h:65:41: warning: 'return' with a value, in function returning void
 #define XST_FAILURE                     1L
                                         ^
../src/interrupt_counter_tut_2D.c:789:37: note: in expansion of macro 'XST_FAILURE'
    if(status != XST_SUCCESS) return XST_FAILURE;
                                     ^~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:779:6: note: declared here
 void reInitTimer(){
      ^~~~~~~~~~~
make: *** [src/interrupt_counter_tut_2D.o] Fejl 1

16:13:50 Build Finished (took 453ms)

